<resources>
    <string name="app_name" translatable="false">Meteo System</string>
    <string name="select_station">SELECT</string>
    <string name="all_stations">All Stations</string>
    <string name="fav_stations">Favourities</string>
    <string name="station_summary">Current Values</string>
    <string name="station_plots">Plots</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_gusts">Wind Gusts</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="temperature">Temperature</string>
    <string name="qnh">QNH Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="auto_refresh">Values in this window are refreshed automatically each 90 seconds</string>
    <string name="dash">-</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="delete_fav">Delete from favourities</string>
    <string name="station_not_comm">Warning! This station doesn\'t send any data for longer than 2 hours</string>
    <string name="station_disabled">Warning! This station has been temporarily disabled or it is not functional for long time</string>
    <string name="archive_data">Archival Data</string>
    <string name="export_from">Export From</string>
    <string name="time_scale">Time Scale</string>
    <string name="mean_value">Average</string>
    <string name="max_value">Maximum Value</string>
    <string name="show_previous">Show previous</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="hours_12">12 Hours</string>
    <string name="hours_24">24 Hours</string>
    <string name="maximum">Maximum</string>
    <string name="ok">OK</string>
    <string name="select">Select</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="wind_rose">Wind Rose</string>
    <string name="mean_value_short">Avg:</string>
    <string name="max_value_short">Max:</string>
    <string name="add_fav">Add to favourites</string>
    <string name="north" translatable="false">N</string>
    <string name="south" translatable="false">S</string>
    <string name="east" translatable="false">E</string>
    <string name="west" translatable="false">W</string>
    <string name="wind_gust_short">Gust</string>
    <string name="last_hour">Last Hour</string>
    <string name="wind_direction_short">Direction</string>
    <string name="temperature_short">Tempr</string>
    <string name="degress">Degrees</string>
    <string name="degrees_sign" translatable="false">°</string>
    <string name="max_1h_gust">Max gust in last hour</string>
    <string name="min_1h_avg">Min average in last hour</string>
    <string name="no_data">No data</string>
    <string name="warning">Warning!</string>
    <string name="station_doesnt_transmit">Station doesn\'t transmit data</string>
    <string name="for_longer_than_2_hours">for longer than 2 hours</string>
    <string name="export_data">Export Data</string>
    <string name="export_ln">Lenght in hours</string>
    <string name="select_station_export">Select station to export</string>
    <string name="start_data">Start date and time</string>
    <string name="max_100_hours">Maximum 199 hours</string>
    <string name="output_fn">Output file</string>
    <string name="start_export">EXPORT</string>
    <string name="output_export_format">Output file format</string>
    <string name="last_data_timestamp">Time of last measurement</string>
    <string name="wind_speed_plots">Wind Speed Plots</string>
    <string name="wind_direction_plots">Wind Direction Plot</string>
    <string name="temperature_plot">Temperature Plot</string>
    <string name="humidity_plot">Humidity Plot</string>
    <string name="station_doesnt_measure">The station doesn\'t measure this parameter</string>
    <string name="meters_per_second" translatable="false">m/s</string>
    <string name="knots" translatable="false">kn</string>
    <string name="click_on_plot">Click on the plot</string>
    <string name="sort_alphabetical">Sort in alphabetical order</string>
    <string name="sort_in_adding_order">Sort in adding order</string>
    <string name="clear_from_non_existent">Clear removed stations</string>
    <string name="days_3">Three days</string>
    <string name="plot_data_lenght">Plots data lenght</string>
    <string name="title_activity_trend" translatable="false">Trend</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="current_value">Current Value</string>
    <string name="h2_value">Two hours ago</string>
    <string name="h4_value">Four hours ago</string>
    <string name="h6_value">Six hours ago</string>
    <string name="h8_value">Eight hours ago</string>
    <string name="no_comm_with_backend">No communication with a server</string>
    <string name="no_stations_in_fav_1">There are no stations on Your favourites list</string>
    <string name="no_stations_in_fav_2">Please use a menu in Station Details screen to add something</string>
    <string name="fav_added_success">The station has been added successfully</string>
    <string name="fav_deleted_success">The station has been removed successfully</string>
    <string name="settings">Settings</string>
    <string name="test_warning">Warning! This is a test version of the application!</string>
    <string name="credits_1">Developed by:</string>
    <string name="credits_2" translatable="false">Mateusz Lubecki</string>
    <string name="credits_3" translatable="false">Bielsko - Biała 2020, 2021, 2022</string>
    <string name="credits_4" translatable="false">sp8ebc@gmail.com</string>
    <string name="credits_5" translatable="false">tel: +48 660 43 44 46</string>
    <string name="camera">Online Camera</string>
    <string name="forecast">Weather forecast</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="language">Language</string>
    <string name="unit_of_measure">Unit of measure</string>
    <string name="wind_unit_of_measure">Windspeed unit</string>
    <string name="filter">Filter</string>
    <string name="search">Search by name</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_in_add_order">Sort by add to list order</string>
    <string name="translation_authors">Translations made by</string>
    <string name="ice_temperature">Ice temperature</string>
    <string name="reference_runner_temperature">Reference runner temperature</string>
    <string name="records">Record values</string>
    <string name="last_30_days">In last 30 days</string>
    <string name="this_year">In this year</string>
    <string name="ever">Since the station installation</string>
    <string name="data_sources">Data sources</string>
    <string name="callsign">APRS callsign</string>
    <string name="holfuy_id" translatable="false">Holfuy ID</string>
    <string name="email" translatable="false">Email</string>
    <string name="csv" translatable="false">CSV</string>
    <string name="xlsx" translatable="false">MS Excel XLS</string>
    <string-array name="export_formats">
        <item>@string/xlsx</item>
        <item>@string/csv</item>
    </string-array>
    <string name="select_output_file">Select output file</string>
    <string name="success">Operation successed</string>
    <string name="failure">Operation failed</string>
    <string name="knots_long">kn (knots)</string>
    <string name="export_decimation">Export data decimation</string>
    <string name="export_decimation_minutes">Minimum time resolution</string>
    <string-array name="languages">
        <item>AUTO</item>
        <item>Polski</item>
        <item>Čeština</item>
        <item>Українська мова</item>
        <item>Русский</item>
        <item>Latviešu</item>
        <item>English</item>
        <item>Deutsch</item>
    </string-array>
    <string name="lang_change_req_restart" translatable="false">Changing language requires app restart after making a choose in this window.</string>
    <string name="www_link">URL to more information</string>
    <string name="refreshing_station_list">Refreshing station list</string>
    <string name="all_stations_empty_list1">There are no stations on this list.</string>
    <string name="all_station_empty_list2">Please wait or pull down to refresh list.</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading">Loading...</string>
    <string name="credits_2_rafal" translatable="false">Rafał Woloszyn</string>
    <string name="search_for_station">Search for station</string>
    <string name="search_bar">Search</string>
</resources>