<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RadioGroup
        android:id="@+id/radioGroupDialogPlotLn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonPlotDataDlg12h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hours_12" />

        <RadioButton
            android:id="@+id/radioButtonPlotDataDlg24h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hours_24" />

        <RadioButton
            android:id="@+id/radioButtonPlotDataDlg3d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/days_3" />
    </RadioGroup>
</LinearLayout>