<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wind">

    <action
        android:id="@+id/action_global_mobile_navigation"
        app:destination="@id/navigation_wind" />

    <fragment
        android:id="@+id/navigation_wind"
        android:name="cc.pogoda.mobile.meteosystem.activity.trend.wind.WindTrendFragment"
        android:label="@string/wind"
        tools:layout="@layout/fragment_wind" >
        <argument
            android:name="station"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_wind_to_navigation_temperature"
            app:destination="@id/navigation_temperature">
            <argument
                android:name="station"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_temperature"
        android:name="cc.pogoda.mobile.meteosystem.activity.trend.temperature.TemperatureTrendFragment"
        android:label="@string/temperature"
        tools:layout="@layout/fragment_temperature" >
        <argument
            android:name="station"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_temperature_to_navigation_pressure"
            app:destination="@id/navigation_pressure">
            <argument
                android:name="station"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_pressure"
        android:name="cc.pogoda.mobile.meteosystem.activity.trend.pressure.PressureTrendFragment"
        android:label="@string/pressure"
        tools:layout="@layout/fragment_pressure" >
        <argument
            android:name="station"
            app:argType="string">
        </argument>
        <action
            android:id="@+id/action_navigation_pressure_to_navigation_wind"
            app:destination="@id/navigation_wind">
            <argument
                android:name="station"
                app:argType="string" />
        </action>
    </fragment>
</navigation>