<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StationDetailsSummaryActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewStationDetailsSummaryTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTemperatureCaption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:text="@string/temperature"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewTemperatureValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewWinddirCaption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:scrollHorizontally="true"
                android:text="@string/wind_direction"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewWinddirValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewWindSpeedCaption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:scrollHorizontally="true"
                android:text="@string/wind_speed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewWindSpeedValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewWindGusts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:scrollHorizontally="true"
                android:text="@string/wind_gusts"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewWindGustsValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewQnh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:text="@string/qnh"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewQnhVaue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewHumidity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:text="@string/humidity"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewHumidityValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2">

                <TextView
                    android:id="@+id/textViewSummaryMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollIndicators="right"
                    android:scrollHorizontally="true"
                    android:text="@string/auto_refresh"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>
    </TableLayout>
</RelativeLayout>